--- a/file1.html
+++ b/file1.html
@@ -9,5 +9,8 @@
 <body>
     <h1>Hello World</h1>
     <h2>This is h2</h2>
+    <script>
+        console.log("Hello World");
+    </script>
 </body>
 </html>
