--- a/file1.html
+++ b/file1.html
@@ -9,7 +9,9 @@
 <body>
     <h1>Hello World</h1>
     <h2>This is h2</h2>
-    
+    <script>
+        console.log("Hello World");
+    </script>
 </body>
 </html>
 <script>
